fixed header spacing in other pages

--- a/style/about_style.css
+++ b/style/about_style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:wght@300&family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Open+Sans:wght@300&family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
 
 :root {
   --pale_blue_gray: #666A86;
@@ -70,7 +70,8 @@ body {
   /* transition: all 0.01s; */
   position: fixed;
   font-family: 'Raleway', sans-serif;
-  top: 200px;
+  top: 50vh;
+  transform: translateY(-50%);
   right: 100px;
 }
 
@@ -182,6 +183,7 @@ body {
   font-size: 0.8em;
   letter-spacing: -1px;
   font-family: 'Lato', sans-serif;
+  font-weight: 400;
   margin-bottom: 20px;
   color: var(--primary_text);
 }
