--- a/style/work_style.css
+++ b/style/work_style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:wght@300&family=Raleway:wght@100;200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Open+Sans:wght@300&family=Raleway:wght@100;200;300&display=swap');
 
 :root {
   --pale_blue_gray: #666A86;
@@ -69,7 +69,8 @@ body {
   /* transition: all 0.01s; */
   position: fixed;
   font-family: 'Raleway', sans-serif;
-  top: 200px;
+  top: 50vh;
+  transform: translateY(-70%);
   right: 100px;
 }
 
@@ -171,6 +172,7 @@ body {
   text-transform: uppercase;
   font-size: 0.8em;
   letter-spacing: -1px;
+  font-weight: 400;
   font-family: 'Lato', sans-serif;
   margin-bottom: 20px;
   color: var(--primary_text);
